--- a/WebAppTest/pom.xml
+++ b/WebAppTest/pom.xml
@@ -11,6 +11,26 @@
 
     <artifactId>webAppTest</artifactId>
 
+    <properties>
+        <webAppTest>webAppTest.xml</webAppTest>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.14.1</version>
+                <configuration>
+                    <suiteXmlFiles>
+                        <suiteXmlFile>src/main/resources/${webAppTest}</suiteXmlFile>
+                    </suiteXmlFiles>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
+
     <dependencies>
         <dependency>
             <groupId>org.testng</groupId>
@@ -29,5 +49,8 @@
             <artifactId>selenium-java</artifactId>
         </dependency>
     </dependencies>
+
+
+
 
 </project>
